--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <aside>
       <div class="photo-candy01">blue</div>
         <h3>Candy of the Week</h3>
-        <img scr="./images/candy01" alt="The Rainbow" style="width:304px;height:228px;">
+        <img scr="candy01.JPEG" alt="The Rainbow" style="width:304px;height:228px;">
           <p>You know that is all you need.</p>
           <a href="url">Book now -> </a>
       </div>
 
       <div class="photo-candy02">
         <h3>Fan Favorite</h3>
-        <img scr="./images/candy02" alt="M&Ms" style="width:304px;height:228px;">
+        <img scr="candy02.JPEG" alt="M&Ms" style="width:304px;height:228px;">
         <a href="url">Book Now -> </a>
       </div>
     </aside
@@ -54,3 +54,6 @@
       </footer>
 </body>
 </html>
+
+
+<p></p>
