second page is finished

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
     <section>
      <div class=urls>
+      <a href="index.html">Home</a>
       <a href="url">About</a>
       <a href="url">Rates</a>
       <a href="url">Liability Release</a>
-      <a href="url">Kitty Profiles</a>
-      <a href="url">Book a Cat</a>
+      <a href="more-candies.html">Candy Profiles</a>
+      <a href="url">Book a time to try candies</a>
      </div>
     </section>
 
